k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moto
  labels:
    app.kubernetes.io/part-of: moto
